src/tests/testfiles/function-calls/14.txt
testfiles/function-calls/14.c:9:5: error: argument 1 of function 'printf' should be of type 'const char []' but is of type 'int'
printf(a);
^
testfiles/function-calls/14.c:10:5: error: argument 1 of function 'printf' should be of type 'const char []' but is of type 'int'
printf(a, b, f);
^
